# client

./: .gitignore  CMakeLists.txt
admin/osx/: CMakeLists.txt
src/cmd/: cmd.cpp
src/gui/: CMakeLists.txt  accountmanager.cpp  application.cpp  connectionvalidator.cpp  folder.cpp  owncloudgui.cpp  owncloudgui.h  servernotificationhandler.cpp  settingsdialog.cpp
src/gui/models/: activitylistmodel.cpp
src/gui/socketapi/: socketuploadjob.cpp
src/gui/updater/: CMakeLists.txt  appimageupdater.cpp  appimageupdater.h  ocupdater.cpp  updater.cpp  updater.h
src/gui/wizard/: owncloudadvancedsetuppage.cpp
src/gui/wizard2/: CMakeLists.txt  oauthpage.cpp  oauthpage.h  oauthpage.ui  progress.cpp  progress.h  progress.ui  serverpage.cpp  serverpage.h  serverpage.ui  spinpage.cpp  spinpage.h  spinpage.ui  wizard.cpp  wizard.h  wizard.ui  wizardpage.cpp  wizardpage.h
src/gui/wizard2/jobs/: resolveurl.cpp  resolveurl.h
src/libsync/: CMakeLists.txt  abstractcorejob.cpp  abstractcorejob.h  account.cpp  account.h  determineauthtypejob2.cpp  determineauthtypejob2.h  discovery.cpp  graphapi.cpp  graphapi.h  graphapijob.cpp  graphapijob.h  networkjobs.cpp  networkjobs.h  ocisspacesman.cpp  ocisspacesman.h  propagateuploadtus.cpp  theme.cpp  theme.h
src/libsync/creds/: oauth.cpp
src/libsync/graphapi/: drives.cpp  drives.h
src/libsync/networkjobs/: jsonjob.cpp  jsonjob.h
test/: syncenginetestutils.h  testasyncop.cpp  testupdater.cpp
test/gui/shared/steps/: steps.py
test/gui/tst_sharing/: test.feature
test/gui/tst_syncing/: test.feature
test/pact/: CMakeLists.txt  Makefile  conanfile.txt  pactHelper.cpp
test/pact/consumer/: consumer.h  matcher.h  matchers.h  pact_mock_server_ffi.h
test/pact/include/: consumer.cpp  consumer.h  matchers.cpp  pact_mock_server_ffi.h
test/testutils/: syncenginetestutils.h
